<resources>
    <string name="app_name">EjemploV2NavegacionUdeaCiclo4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="eti_atras">VOLVER</string>
    <string name="eti_siguiente">SIGUIENTE</string>
    <string name="eti_titulo_fragmento1">FRAGMENTO  1</string>
    <string name="eti_contenido_fragmento_1">F1</string>
    <string name="eti_contenido_fragmento_2">F2</string>
    <string name="eti_titulo_fragmento2">FRAGMENTO 2</string>
    <string name="eti_titulo_fragmento_menu">MENU PRINCIPAL</string>
    <string name="eti_titulo_app">UDEA - NAVEGACION</string>
    <string name="txt_fragmento1">FRAGMENTO #1</string>
    <string name="txt_fragmento2">FRAGMENTO #2</string>
</resources>