<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    tools:context=".FragmentoMenu">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/eti_titulo_fragmento_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#A30F0F"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnFragmento1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragmento1"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnFragmento2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_fragmento2"
        android:textSize="20sp" />

</LinearLayout>